Simplified spark deployment scripts